# django-insights

./: .gitattributes  .gitignore  404.html  LICENSE  Makefile  README.md  index.html  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.github/workflows/: main.yml
alternatives/: index.html
django_insights/: __init__.py  apps.py  charts.py  choices.py  database.py  managers.py  metrics.py  metrics_types.py  models.py  pytest.py  registry.py  settings.py  urls.py  utils.py  views.py
django_insights/management/commands/: collect_insights.py
django_insights/migrations/: 0001_initial.py
django_insights/static/insights/css/: insights.css  pdf.css
django_insights/static/insights/js/: insights.js
django_insights/templates/insights/: app.html  base.html  dashboard.html  pdf.html
django_insights/templatetags/: insight_chart.py  nice_format.py  remove_substr.py
docs/: index.md  installation.md  license.md  types.md
docs/stylesheets/: extra.css
installation/: index.html
license/: index.html
project/: settings.py  urls.py
project/settings/: base.py  dev.py  test.py
project/testapp/: apps.py  insights.py  models.py
project/testapp/management/commands/: seed_db.py
project/testapp/migrations/: 0001_initial.py
project/testapp/users/: apps.py  insights.py  models.py
project/testapp/users/migrations/: 0001_initial.py  0002_alter_appuser_created.py
requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py311-django41.txt  py311-django42.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in
search/: search_index.json
stylesheets/: extra.css
tests/: test_api.py  utils.py
types/: index.html
