[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[distutils]
index-servers = ["pypi"]

[pypi]
repository = "https://upload.pypi.org/legacy/"
username = "terminalkitten"

[project]
name = "django-insights"
authors = [{ name = "DK", email = "dk@terminalkitten.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Matplotlib",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "description"]
dependencies = [
    "django",
    "matplotlib",
    "tqdm",
    "weasyprint==52.5",
    "django-weasyprint==1.1.0.post2",
]

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "flit",
    "flake8",
    "pytest",
    "pytest-django",
    "mypy",
    "isort",
    "wheel",
    "faker",
]
doc = ["pdoc"]

[project.scripts]
insights = "django_insights.cli:cli"

[project.urls]
Home = "https://github.com/terminalkitten/django-insights"

[tool.django-stubs]
django_settings_module = "project.settings"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["error", "ignore::UserWarning"]
addopts = """\
    --strict-config
    --strict-markers
    --ds=project.settings.test
    """
django_find_project = false
